<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_per_inf"
            android:icon="@drawable/ic_menu_user"
            android:title="@string/menu_per_inf" />
        <item
            android:id="@+id/nav_qr"
            android:icon="@drawable/ic_menu_qr"
            android:title="@string/menu_qr" />
        <item
            android:id="@+id/nav_log"
            android:icon="@drawable/ic_menu_log"
            android:title="@string/menu_log" />
        <item
            android:id="@+id/nav_add_user"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_add_user" />
    </group>


</menu>
