<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="@dimen/frame"
        >

        <ImageButton
            android:id="@+id/per_inf_img_edit"
            android:layout_width="@dimen/per_inf_image"
            android:layout_height="@dimen/per_inf_image"
            android:padding="1dp"
            android:scaleType="fitXY"
            android:foreground="@drawable/image_frame"
            android:onClick="perImgEditClick"
            />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/second_name_inf_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/second_name_inf"
            android:inputType="text"
            android:textSize="@dimen/per_inf_text"
            android:padding="@dimen/frame"
            android:layout_weight="1" />
        <EditText
            android:id="@+id/first_name_inf_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name_inf"
            android:inputType="text"
            android:textSize="@dimen/per_inf_text"
            android:padding="@dimen/frame"
            android:layout_weight="1" />
    </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:background="@drawable/text_frame"
            android:layout_height="1.5dp" />
        <EditText
            android:id="@+id/patronymic_inf_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/patronymic_inf"
            android:inputType="text"
            android:textSize="@dimen/per_inf_text"
            android:padding="@dimen/frame"/>
        <View
            android:layout_width="wrap_content"
            android:background="@drawable/text_frame"
            android:layout_height="1.5dp" />
        <EditText
            android:id="@+id/birthday_inf_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/birthday_inf"
            android:inputType="date"
            android:textSize="@dimen/per_inf_text"
            android:padding="@dimen/frame"/>
        <View
            android:layout_width="wrap_content"
            android:background="@drawable/text_frame"
            android:layout_height="1.5dp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/group_inf_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/group_inf"
            android:inputType="text"
            android:textSize="@dimen/per_inf_text"
            android:padding="@dimen/frame"
            android:layout_weight="1"/>
        <EditText
            android:id="@+id/type_id_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/type_inf"
            android:inputType="text"
            android:textSize="@dimen/per_inf_text"
            android:padding="@dimen/frame"
            android:layout_weight="1"/>
    </LinearLayout>
        <View
            android:layout_width="wrap_content"
            android:background="@drawable/text_frame"
            android:layout_height="1.5dp" />
        <EditText
            android:id="@+id/telephone_inf_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/telephone_inf"
            android:inputType="phone"
            android:textSize="@dimen/per_inf_text"
            android:padding="@dimen/frame"/>
        <View
            android:layout_width="wrap_content"
            android:background="@drawable/text_frame"
            android:layout_height="1.5dp" />
        <EditText
            android:id="@+id/mail_inf_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mail_inf"
            android:inputType="textEmailAddress"
            android:textSize="@dimen/per_inf_text"
            android:padding="@dimen/frame"/>
        <View
            android:layout_width="wrap_content"
            android:background="@drawable/text_frame"
            android:layout_height="1.5dp" />
        <EditText
            android:id="@+id/user_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/user_id"
            android:inputType="number"
            android:textSize="@dimen/per_inf_text"
            android:padding="@dimen/frame"/>
        <Button
            android:id="@+id/ind_edit_button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/per_inf_save_button"
            android:onClick="saveEdit"
            android:textColor="@color/buttonTextColor"
            android:background="@drawable/button_form"
            />
    </LinearLayout>

</ScrollView>