<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardview_dark_background">

    <FrameLayout
        android:id="@+id/cameraPreview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
    </FrameLayout>

    <TextView
        android:id="@+id/scanText"
        android:text="@string/camera_view_text"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:textColor="@color/cardview_light_background">
    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
    <Button
        android:id="@+id/ScanButton"
        android:text="@string/camera_button_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:textColor="@color/buttonTextColor"
        android:background="@drawable/button_form"
        />
        <Button
            android:id="@+id/CancelButton"
            android:text="@string/camera_cancel_button_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textColor="@color/buttonTextColor"
            android:background="@drawable/button_form"/>
    </LinearLayout>
</LinearLayout>
